scripts/nullaway/annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8.txt
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/RoutingTableStateTesting.java:23: error: [NullAway] initializer method does not guarantee @NonNull field kads (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RoutingTableStateTesting()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/JKademliaNode.java:300: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return clo.getContentFound();
        ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/DHTContentImpl.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.key;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/util/serializer/JsonSerializer.java:40: error: [NullAway] dereferenced expression data is @Nullable
            gson.toJson(data.getClass().getName(), String.class, writer);
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/SimpleMessage.java:43: error: [NullAway] dereferenced expression this.content is @Nullable
            out.writeInt(this.content.length());
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/ContentLookupMessage.java:42: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.params;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/StoreContentMessage.java:72: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.content;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StoredContentManager.java:171: error: [NullAway] dereferenced expression this.entries.get(entry.getKey()) is @Nullable
            this.entries.get(entry.getKey()).remove(entry);
                                            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
